--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Mip-Splatting Viewer Examples</title>
   <script type="text/javascript" src="js/util.js"></script>
-  <script type="text/javascript" src="enable-threads.js"></script>
+  <script type="text/javascript" src="js/enable-threads.js"></script>
 
   <style>
 
