--- a/ignatius-cropped.html
+++ b/ignatius-cropped.html
@@ -40,7 +40,7 @@
     
     let path = './assets/splats/ignatius-cropped.ply';
 
-    viewer.addSplatScene(path), {
+    viewer.addSplatScene(path, {
       'streamView': true
     })
     .then(() => {
