--- a/index.html
+++ b/index.html
@@ -541,6 +541,11 @@
             <span class="small-title">Ignatius-cropped</span>
           </div>
 
+          <div class="demo-scene-panel" onclick="openDemo('francis')">
+            <img src="assets/images/francis.png" class="demo-scene-panel-image">
+            <span class="small-title">Francis</span>
+          </div>
+
         </div>
         <div class="content-row">
 
