--- a/francis.html
+++ b/francis.html
@@ -20,7 +20,7 @@
   <style>
 
     body {
-      background-color: #ff0000;
+      background-color: #87ceeb;
       height: 100vh;
       margin: 0px;
     }
