--- a/index.html
+++ b/index.html
@@ -549,14 +549,9 @@
         </div>
         <div class="content-row">
 
-          <div class="demo-scene-panel" onclick="openDemo('ignatius-full')">
-            <img src="assets/images/ignatius-full.png" class="demo-scene-panel-image">
-            <span class="small-title">Ignatius-full</span>
-          </div>
-
-          <div class="demo-scene-panel" onclick="openDemo('ignatius-cropped')">
-            <img src="assets/images/ignatius-cropped.png" class="demo-scene-panel-image">
-            <span class="small-title">Ignatius-cropped</span>
+          <div class="demo-scene-panel" onclick="openDemo('panther')">
+            <img src="assets/images/panther.png" class="demo-scene-panel-image">
+            <span class="small-title">Panther</span>
           </div>
 
         </div>
