--- a/index.html
+++ b/index.html
@@ -525,33 +525,25 @@
     <div class="header-content-container">
         <div class="title">
           <div style="margin: auto; font-size: 14pt;">
-            Demo scenes
+            Our Low-resolution 3D Models from the "Tanks & Temples" Benchmark
           </div>
         </div>
 
-        <div class="content-row">
-
-          <div class="demo-scene-panel" onclick="openDemo('ignatius-full')">
-            <img src="assets/images/ignatius-full.png" class="demo-scene-panel-image">
-            <span class="small-title">Ignatius-full</span>
-          </div>
-
-          <div class="demo-scene-panel" onclick="openDemo('ignatius-cropped')">
-            <img src="assets/images/ignatius-cropped.png" class="demo-scene-panel-image">
-            <span class="small-title">Ignatius-cropped</span>
-          </div>
-
-          <div class="demo-scene-panel" onclick="openDemo('francis')">
-            <img src="assets/images/francis.png" class="demo-scene-panel-image">
-            <span class="small-title">Francis</span>
-          </div>
-
-        </div>
         <div class="content-row">
 
           <div class="demo-scene-panel" onclick="openDemo('panther')">
             <img src="assets/images/panther.png" class="demo-scene-panel-image">
             <span class="small-title">Panther</span>
+          </div>
+
+          <div class="demo-scene-panel" onclick="openDemo('ignatius')">
+            <img src="assets/images/ignatius.png" class="demo-scene-panel-image">
+            <span class="small-title">Ignatius</span>
+          </div>
+
+          <div class="demo-scene-panel" onclick="openDemo('francis')">
+            <img src="assets/images/francis.png" class="demo-scene-panel-image">
+            <span class="small-title">Francis</span>
           </div>
 
         </div>
