--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
 
     .header-content-container {
-      background-color: #e7e9eb;
+      background-color: #e9f1ee;
       border-radius: 7px;
       -moz-box-shadow: 0px 2px 10px -1px rgb(0 0 0 / 39%);
       -webkit-box-shadow: 0px 2px 10px -1px rgb(0 0 0 / 39%);
