--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style>
 
     body {
-      background-color: #CCD5DE;
+      background-color: #FFFFFF;
       height: 100vh;
       margin: 0px;
     }
