--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Gaussian Splatting Models</title>
+  <title>3D Model Gallery</title>
   <script type="text/javascript" src="js/util.js"></script>
   <script type="text/javascript" src="enable-threads.js"></script>
 
@@ -510,7 +510,7 @@
     <div class="header-content-container">
       <div class="title">
         <div style="margin: auto">
-          View 3D Models via Gaussian Splatting
+          3D Model Gallery
         </div>
       </div>
       <div style="padding-left: 20px; padding-right: 20px;">
@@ -551,133 +551,7 @@
     <br>
     <div class="header-content-container">
         <div class="content-row">
-            <div id ="view-panel" class="splat-panel" style="height:300px;">
-                <br>
-                <div class="small-title">View a <span class="file-ext">.ply</span>, <span class="file-ext">.ksplat</span>, or <span class="file-ext-small">.splat</span> file</div>
-                <br>
-                <table style="text-align: left;">
-                    <tr>
-                    <td colspan="2">
-                        <label for="viewFile">
-                        <span class="glyphicon glyphicon-folder-open" aria-hidden="true"><span class="button">Choose file</span></span>
-                        <input type="file" id="viewFile" style="display:none" onchange="window.onFileChange(this, 'viewFileName')">
-                        </label>
-                        <span id="viewFileName" style="padding-left:15px; color: #333333">(No file chosen)</span>
-                    </td>
-                    </tr>
-                    <tr>
-                    <td colspan="2" style="height: 10px;"></td>
-                    </tr>
-                    <tr>
-                    <td>
-                        Minimum alpha:&nbsp;
-                    </td>
-                    <td>
-                        <input id="alphaRemovalThresholdView" type="text" class="text-input" style="width: 50px" value="1"></input>
-                        <span style="color:#888888">(1 - 255)</span>
-                    </td>
-                    </tr>
-                    <tr>
-                    <td>
-                        Camera up:&nbsp;
-                    </td>
-                    <td>
-                        <input id="cameraUp" type="text" class="text-input" style="width: 90px" value="0, 1, 0"></input>
-                    </td>
-                    </tr>
-                    <tr>
-                    <td>
-                        Camera position:&nbsp;
-                    </td>
-                    <td>
-                        <input id="cameraPosition" type="text" class="text-input" style="width: 90px" value="0, 1, 0"></input>
-                    </td>
-                    </tr>
-                    <tr>
-                    <td>
-                        Camera look-at:&nbsp;
-                    </td>
-                    <td>
-                        <input id="cameraLookAt" type="text" class="text-input" style="width: 90px" value="1, 0, 0"></input>
-                    </td>
-                    </tr>
-                </table>
-                <br>
-                <span class="button" onclick="window.viewSplat()">View</span>
-                &nbsp;&nbsp;
-                <span class="button" onclick="reset()">Reset</span>
-                <br>
-                <br>
-                <div style="display: flex; flex-direction: row; width: 230px; margin: auto;">
-                    <div style="width: 50px;">
-                        <div id="view-loading-icon" class="loading-icon" style="display: none;">
-                        </div>
-                    </div>
-                    <div id="viewStatus" style="text-align: left; color: #333333; margin-top: 7px; margin-left: 15px; width: 175px"></div>
-                </div>
-                <span id="viewError" style="color: #ff0000"></span>
-            </div>
       
-            <div id ="conversion-panel" class="splat-panel" style="height:300px;">
-                <br>
-                <span class="small-title">Convert a <span class="file-ext">.ply</span> or <span class="file-ext">.splat</span> to <span class="file-ext">.ksplat</span></span>
-                <br>
-                <br>
-                <table style="text-align: left;">
-                    <tr>
-                    <td colspan="2">
-                        <label for="conversionFile">
-                        <span class="glyphicon glyphicon-folder-open" aria-hidden="true"><span class="button">Choose file</span></span>
-                        <input type="file" id="conversionFile" style="display:none" onchange="window.onFileChange(this, 'conversionFileName')">
-                        </label>
-                        <span id="conversionFileName" style="padding-left:15px; color: #333333">(No file chosen)</span>
-                    </td>
-                    </tr>
-                    <tr>
-                    <td colspan="2" style="height: 10px;"></td>
-                    </tr>
-                    <tr>
-                    <td>
-                        Compression level:
-                    </td>
-                    <td>
-                        <input id="compressionLevel" type="text" class="text-input" style="width: 50px" value="1"></input>
-                        <span style="color:#888888">(0 or 1)</span>
-                    </td>
-                    </tr>
-                    <tr>
-                    <td>
-                        Minimum alpha:&nbsp;
-                    </td>
-                    <td>
-                        <input id="alphaRemovalThreshold" type="text" class="text-input" style="width: 50px" value="1"></input>
-                        <span style="color:#888888">(1 - 255)</span>
-                    </td>
-                    </tr>
-                </table>
-                <br>
-                <span id="convertButton" class="button" onclick="window.convertPlyFile()">Convert</span>
-                <br>
-                <br>
-                <div style="text-align: center;">
-                <div style="display: flex; flex-direction: row; width: 230px; margin: auto;">
-                    <div style="width: 50px;">
-                        <div id="conversion-loading-icon" class="loading-icon" style="display: none;">
-                        </div>
-                        <div id="check-icon" class="check" style="display: none;">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="35px" width="35px" version="1.1" id="Capa_1" viewBox="0 0 17.837 17.837" xml:space="preserve" style="background:#ffffff00;">
-                            <g>
-                                <path style="fill:#00790a;" d="M16.145,2.571c-0.272-0.273-0.718-0.273-0.99,0L6.92,10.804l-4.241-4.27   c-0.272-0.274-0.715-0.274-0.989,0L0.204,8.019c-0.272,0.271-0.272,0.717,0,0.99l6.217,6.258c0.272,0.271,0.715,0.271,0.99,0   L17.63,5.047c0.276-0.273,0.276-0.72,0-0.994L16.145,2.571z"/>
-                            </g>
-                            </svg>
-                        </div>
-                    </div>
-                    <div id="conversionStatus" style="text-align: left; color: #333333; margin-top: 7px; margin-left: 15px; width: 175px"></div>
-                </div>
-                </div>
-                <span id="conversionError" style="color: #ff0000"></span>
-            </div>
-
             <div id ="controls-panel" class="splat-panel" style="height:360px;">
 
                 <br>
