--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         </div>
       </div>
       <div style="padding-left: 20px; padding-right: 20px;">
-        These 3D models were created from short video clips using our photogrammetry pipeline. The 3D scenes here are rendered using 3D gaussian splatting. The online viewer is adapted from <a href="https://github.com/mkkellogg/GaussianSplats3D <view-source:https://github.com/mkkellogg/GaussianSplats3D>">GaussianSplats3D</a> (thanks to the author for sharing his work!).
+        These 3D models were created from short video clips using our photogrammetry pipeline. The 3D scenes are rendered using 3D gaussian splatting. The online viewer is adapted from <a href="https://github.com/mkkellogg/GaussianSplats3D <view-source:https://github.com/mkkellogg/GaussianSplats3D>">GaussianSplats3D</a> (thanks to the author for sharing his work!). The input video clips are from the <a href="https://www.tanksandtemples.org/">Tanks and Temples</a> 3D reconstruction benchmark.
         <br><br>
         Click on each 3D scene in the gallery to interactively view them. The viewer uses the following mouse inputs:
         <ul>
